OldArchive/326fb00e79a825579720356e1dc67d35-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp: In function 'void assert(const char*)':
main.cpp:33:11: error: 'runtime_error' is not a member of 'std'
     throw std::runtime_error();
           ^
main.cpp: At global scope:
main.cpp:58:64: error: expected type-specifier
     template<typename T> auto numerical_range(T min, T max) -> std::function<std::optional<T>()>
                                                                ^
main.cpp:58:64: error: expected initializer
main.cpp: In function 'int main()':
main.cpp:67:5: error: 'cout' is not a member of 'std'
     std::cout << range::numerical_range(0, 100) | range::fold([](int lhs, int rhs) { return lhs + rhs; });
     ^
main.cpp:67:18: error: 'numerical_range' is not a member of 'range'
     std::cout << range::numerical_range(0, 100) | range::fold([](int lhs, int rhs) { return lhs + rhs; });
                  ^
